# st0cky_bot

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  go.mod  go.sum  main.go
.github/workflows/: rust.yml
api/: bing.go  telegram.go
db/: keyword.go  news.go  user.go
migrations/: 20210527180817_initial.sql  20210614203142_initial.down.sql  20210614203142_initial.up.sql
models/: Keyword.go  news.go  user.go
setup/: setup.go
src/: main.rs
src/bot/: mod.rs
src/database/: mod.rs
src/models/: api.rs  keyword.rs  mod.rs  news.rs  user.rs
tasks/: cron.go
