[package]
name = "st0cky"
version = "0.1.0"
authors = ["makiri1993 <kireew.martin@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.4", features = ["auto-send", "macros"] }
log = "0.4.8"
pretty_env_logger = "0.4.0"
tokio = { version = "1.3", features = ["full"] }
tokio-stream = "0.1.3"
colored = { version = "2" }
sqlx = { version = "0.5.2", features = [ "postgres", "runtime-tokio-rustls" ] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
